--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(trikh src/trikh_executive.cpp)
+add_executable(trikh_grid_executor src/trikh_grid_exec.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -150,9 +151,14 @@ add_executable(trikh src/trikh_executive.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(trikh ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(trikh_grid_executor ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(trikh
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(trikh_grid_executor
   ${catkin_LIBRARIES}
 )
 
